# annLib

./: .gitignore  README.md  pyproject.toml
annlib/: __init__.py  app.py  cli.py  config.py
annlib/core/: api_validator.py  notebooklm.py  notebooklm_client.py  obsidian.py  openalex.py  pageindex.py  pdf_fetcher.py
annlib/pages/: 00_settings.py  01_search.py  02_summarize.py  03_rag.py
annlib/review/: __init__.py  add.py  project.py  tree.py
skills/review-add/: SKILL.md
skills/review-ask/: SKILL.md
skills/review-gap/: SKILL.md
skills/review-map/: SKILL.md
skills/review-start/: SKILL.md
